# debugprobe-zero

./: .gitignore  CMakeLists.txt  README.md
include/: DAP_config.h  board_pico_config.h  ws2812_led.h
src/: main.c  ws2812_led.c
